# pytation-anonymized

./: .gitignore  README.md  pyproject.toml
benchmarks/: benchmarks.csv
mutation_testing/: command_line_interface.py  config.py  constants.py  dyn_run.py  get_diff.py  mutation.py  mutation_testing_verifier.py  pre_report.py  run.py  test_process.py  utils.py
mutation_testing/detection/: __init__.py  node_finder.py  pattern.py  pattern_detector.py  utils.py
mutation_testing/dynamic_analysis/: OperatorAnalysis.py  __init__.py
mutation_testing/mutation_exceptions/: __init__.py  is_equivalent_error.py  mutation_exception.py  operator_is_dynamic_error.py  operator_is_static_error.py  operator_mutate_error.py  post_call_analysis_error.py  read_attribute_analysis_error.py  return_analysis_error.py
mutation_testing/mutation_operators/: __init__.py  base_operator.py  change_used_attribute.py  delete_attribute_access.py  delete_conversion_functions.py  delete_elements_iterable.py  delete_expressions_if.py  delete_function_argument.py  delete_method_call.py  operators_registry.py  switch_similar_functions.py  utils.py
mutation_testing/mutator/: __init__.py  node_mutator.py
mutation_testing/report_generation/: html_report_generator.py
mutation_testing/running_test_cases/: __init__.py  base_suite_runner.py  pytest_suite_runner.py  unittest_suite_runner.py  utils.py
mutation_testing/static_analysis/: __init__.py  ast_extractor.py  static_analyzer.py
scripts/: aggregate_results.py  compare_candidates.py  mutation_score_per_mutant.py
(+88 files in other folders)
